# bitirme_projesi_ros

./: CMakeLists.txt  README.md  dashboard.py  package.xml  robot_beyni.py  robot_dashboard.rviz
config/: ros_controllers.yaml
launch/: baslat.launch  moveit.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml
models/kutu_gri/: model.config  model.sdf
models/kutu_kirmizi/: model.config  model.sdf
models/kutu_mavi/: model.config  model.sdf
models/kutu_yesil/: model.config  model.sdf
