<?xml version="1.0"?>
<package format="2">
  <name>bitirme_projesi</name>
  <version>1.0.0</version>
  <description>Autonomous ROS-Based Robotic Arm for Recycling - GROUP 1</description>
  <maintainer email="ahmetkutlamaz@todo.todo">Group 1</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ur_gazebo</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <export></export>
</package>
